# NotTAPN

./: .gitignore  CMakeLists.txt  README.md
example-nets/: euler-model.xml  switch-extended.xml  switch.xml
example-workflows/: euler-query.xml  pcq.xml  query1.xml  s-query.xml
include/Core/Query/: AST.hpp  SMCQuery.hpp
include/Core/TAPN/: StochasticStructure.hpp  TimedTransition.hpp
include/DiscreteVerification/: QueryVisitor.hpp
include/DiscreteVerification/Alloc/: AllocHelpers.cuh  CudaPetriNetAllocator.cu  CudaPetriNetAllocator.cuh  RealMarkingAllocator.cuh  RealPlaceAllocator.cuh  RunResultAllocator.cuh  SMCQueryAllocator.cuh
include/DiscreteVerification/Atler/: AtlerRunResult.hpp  SimpleAST.hpp  SimpleDeque.hpp  SimpleDynamicArray.hpp  SimpleInterval.hpp  SimpleOptionsConverter.hpp  SimplePlaceVisitor.hpp  SimpleQueryVisitor.hpp  SimpleRealMarking.hpp  SimpleSMCQuery.hpp  SimpleSMCQueryConverter.hpp  SimpleStochasticStructure.hpp  SimpleTAPNConverter.hpp  SimpleTimeInterval.hpp  SimpleTimeInvariant.hpp  SimpleTimedArcPetriNet.hpp  SimpleTimedInhibitorArc.hpp  SimpleTimedInputArc.hpp  SimpleTimedOutputArc.hpp  SimpleTimedPlace.hpp  SimpleTimedTransition.hpp  SimpleTimedTransportArc.hpp  SimpleVerificationOptions.hpp  SimpleVisitor.hpp
include/DiscreteVerification/Cuda/: CudaAST.cuh  CudaDeque.cuh  CudaDynamicArray.cuh  CudaInterval.cuh  CudaPair.cuh  CudaPlaceVisitor.cuh  CudaQueryVisitor.cuh  CudaRealMarking.cuh  CudaRunResult.cuh  CudaSMCQuery.cuh  CudaSMCQueryConverter.cuh  CudaStochasticStructure.cuh  CudaTAPNConverter.cuh  CudaTimeInterval.cuh  CudaTimedArcPetriNet.cuh  CudaTimedInhibitorArc.cuh  CudaTimedInputArc.cuh  CudaTimedOutputArc.cuh  CudaTimedPlace.cuh  CudaTimedTransition.cuh  CudaTimedTransportArc.cuh  CudaVisitor.cuh  SimpleDeque.cuh  SimpleDynamicArray.cuh  SimplePlaceVisitor.cuh  SimpleRealMarking.cuh  SimpleSMCQuery.cuh  (+3 more)
presentation/slidev/: package-lock.json
src/: CMakeLists.txt
src/DiscreteVerification/: CMakeLists.txt  DiscreteVerification.cpp
src/DiscreteVerification/Cuda/: CMakeLists.txt  CudaAST.cu  CudaProbabilityEstimation.cu  CudaProbablityEstimator.cu  CudaSMCQuery.cu  CudaSimulationKernel.cu
(+18 files in other folders)
